_sass/wiki-list.scss
#wiki-ul {
	padding-right: 40px;
	height: 100%;
	list-style: none;
	display: flex;
	flex-wrap: wrap;
	#wiki-li {
		width: 300px;
		margin: 20px;
		font-family: contentlight;
		color: $color-navy;
		position: relative;
		cursor: pointer;
		transition: 0.3s; 
		&.active, &:hover {
			transition: 0.3s;
			.content {
				background-color: #fff8e4; 
			}
			&:before {
				transform: scaleX(1.10) scaleY(1.10);
				transition: 0.3s;
			}
		}
		&:before {
			content: "";
			width: 100%;
			height: 100%;
			position: absolute;
			background-color: $color-aqua;
			left: 0;
			top: 0;
			border-radius: 15px;
			z-index: 1;
			transform: scaleX(0.85) scaleY(0.85);
			transition: 0.3s;
		}
		.content {
			flex: 1;
			display: grid;
			align-items: center;
			background-color: white;
			color: $color-navy;
			box-shadow: 0 6px 16px rgba(0,0,0,0.15);
			border-radius: 12px;
			position: relative;
			height: 300px;
			z-index: 2;
			padding-left: 20%;
			padding-right: 20%;
			i {
				font-size: 3em;
			}
			h1 {
				font-size: 20px;
				font-weight: 700;
				margin-bottom: 6px;
			}
			h2 {
				font-size: 15px;
				font-weight: 600;
				margin-top: 6px;
				opacity: 0.9;
			}
		}
	}
}

a, u {
    text-decoration: none;
}

